Added thread support, updated D4J to 3.3.0 snapshot